@@ -5,10 +5,16 @@ Changelog
 ------------------
 
 
-- Overrode ObjectSubForm for IObject field [gborelli]
-- Added utils.closest_content from plone.formwidget.contenttree.utils [gborelli]
+- Overrode ObjectSubForm for IObject field in order to provide get_closest_content
+  method. Now it is possible to guess the closest content from a Multiwidget subform.
+  [gborelli]
+
+- Added utils.closest_content from plone.formwidget.contenttree.utils
+  [gborelli]
+
 - Primarily use form name for 'kssattr-formname' form attribute.
   [vipod]
+
 - Rename the 'fieldset.current' hidden input to 'fieldset' for consistency
   with Archetypes.
   [davisagli]
